fix nav height on mobile

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -21,7 +21,7 @@ header
             z-index: 1
     nav
         background: #333
-        height: 35px
+        min-height: 35px
         color: $text-light-color
         line-height: 35px
         text-align: center
